# clang-meta

./: README  README.md
examples/: 0_reflection.hpp  1_metaparse.hpp  2_custom_diagnostics.hpp  3_interface_metaclass.hpp  4_constexpr_containers.hpp  5_diamonds_to_lightning_metaclass.hpp  dummycode.hpp  main.cpp
examples/include/: client_reflection_impl.hpp  crash_tests_etc.hpp  metacore.hpp  pputil.hpp
examples/include/ce/: as_const.hpp  debug.hpp  map.hpp  metacast.hpp  set.hpp  str.hpp  vector.hpp
examples/include/ce/str/: eq.hpp
examples/include/meta/: README
examples/include/meta/util/: apply_to_bases.hpp  inhwrp.hpp  macros.hpp  nmeta.hpp  reflect_arg.hpp
llvm/projects/libcxx/lib/: CMakeLists.txt
llvm/tools/clang/: SCRATCH
llvm/tools/clang/docs/: InternalsManual.rst
llvm/tools/clang/include/: skarupke_function.h
llvm/tools/clang/include/clang/AST/: ASTContext.h  CommentLexer.h  Decl.h  DeclBase.h  DeclCXX.h  DeclOpenMP.h  DeclarationName.h  Expr.h  ExprCXX.h  RecursiveASTVisitor.h  ReflectionIncludes.hpp  Stmt.h  StmtCXX.h  Type.h  TypeLoc.h  TypeNodes.def
llvm/tools/clang/include/clang/Basic/: ClientReflContainers.h  ContainerGetNth.h  DeclNodes.td  DeclNodesRefl.h  DiagnosticASTKinds.td  DiagnosticCommonKinds.td  DiagnosticIDs.h  DiagnosticLexKinds.td  DiagnosticParseKinds.td  DiagnosticSemaKinds.td  IdentifierTable.h  LangOptions.def  PartialDiagnostic.h  ReflectionClient-OLD.h  SourceLocation.h  Specifiers.h  StmtNodes.td  TokenKinds.def  TypeTraits.h  iterator_range.h
llvm/tools/clang/include/clang/Lex/: APValueCharIter.h  Lexer.h  MacroInfo.h  MetaparseDebug.h  PTHLexer.h  Preprocessor.h  TokenLexer.h
llvm/tools/clang/include/clang/Parse/: CDContextVars.h  Parser.h  RAIIObjectsForParser.h
llvm/tools/clang/include/clang/Sema/: CXXFieldCollector.h  DeclSpec.h  ParsedAttr.h  Scope.h  Sema.h  Template.h
llvm/tools/clang/include/clang/Serialization/: ASTBitCodes.h
llvm/tools/clang/include/dwr/: pp_common.h  pp_tree.h
llvm/tools/clang/lib/ARCMigrate/: Transforms.cpp
llvm/tools/clang/lib/AST/: ASTContext.cpp  ASTDumper.cpp  ASTImporter.cpp  ASTStructuralEquivalence.cpp  CMakeLists.txt  Decl.cpp  DeclBase.cpp  DeclCXX.cpp  DeclarationName.cpp  Expr.cpp  ExprCXX.cpp  ExprClassification.cpp  ExprConstant.cpp  ExprConstant.cpp 2.autosave  ExprConstant.cpp 3.autosave  ItaniumMangle.cpp  MicrosoftMangle.cpp  ODRHash.cpp  RecursiveASTVisitor.h  StmtCXX.cpp  StmtPrinter.cpp  StmtProfile.cpp  Type.cpp  TypePrinter.cpp
llvm/tools/clang/lib/Basic/: CMakeLists.txt  ClientReflContainers.cpp  IdentifierTable.cpp  SourceManager.cpp
llvm/tools/clang/lib/CodeGen/: CGDebugInfo.cpp  CGDecl.cpp  CGExprAgg.cpp  CGExprScalar.cpp  CGStmt.cpp  CodeGenFunction.cpp  CodeGenFunction.h  CodeGenModule.cpp  ModuleBuilder.cpp
llvm/tools/clang/lib/Driver/: CMakeLists.txt
llvm/tools/clang/lib/Frontend/: FrontendActions.cpp  InitPreprocessor.cpp
llvm/tools/clang/lib/Lex/: CMakeLists.txt  Lexer.cpp  MacroInfo.cpp  MetaparseDebug.cpp  PPCaching.cpp  PPDebug.cpp  PPDirectives.cpp  PPExpressions.cpp  PPLexerChange.cpp  PPMacroExpansion.cpp  Pragma.cpp  Preprocessor.cpp  StaticVarsInit.cpp  TokenLexer.cpp
llvm/tools/clang/lib/Parse/: CMakeLists.txt  ParseAST.cpp  ParseCXXInlineMethods.cpp  ParseDecl.cpp  ParseDeclCXX.cpp  ParseExpr.cpp  ParseExprCXX.cpp  ParseInject.cpp  ParseMetaparse.cpp  ParseReflect.cpp  ParseStmt.cpp  ParseTentative.cpp  Parser.cpp  ParserBrickWallRAII.cpp
llvm/tools/clang/lib/Sema/: CMakeLists.txt  ReflectedTypeEtc.h  Scope.cpp  Sema.cpp  SemaChecking.cpp  SemaCodeComplete.cpp  SemaDecl.cpp  SemaDeclAttr.cpp  SemaDeclCXX.cpp  SemaExceptionSpec.cpp  SemaExpr.cpp  SemaExprCXX.cpp  SemaInject.cpp  SemaLookup.cpp  SemaMetaparse.cpp  SemaOverload.cpp  SemaReflect.cpp  SemaReflectIncs.cpp  SemaStmt.cpp  SemaTemplate.cpp  SemaTemplateDeduction.cpp  SemaTemplateInstantiate.cpp  SemaTemplateInstantiateDecl.cpp  SemaTemplateVariadic.cpp  SemaType.cpp  TreeTransform.h
llvm/tools/clang/lib/Sema/reflection_incs/: ReflInfoNamespaces.inc  ReflKindGetTotalMemNumCases.inc  ReflKindToStringCases.inc  ReflTrait_SetTypeAndCBs_Cases.inc  ReflectDeleteCases.inc  ReflectPropDecls.inc  ReflectPropDefs.inc  ReflectionHeaderID.h  ReflectionObjKindList.inc
llvm/tools/clang/lib/Serialization/: ASTCommon.cpp  ASTReader.cpp  ASTReaderDecl.cpp  ASTReaderStmt.cpp  ASTWriter.cpp  ASTWriterDecl.cpp  ASTWriterStmt.cpp  CMakeLists.txt
llvm/tools/clang/lib/StaticAnalyzer/Checkers/: CMakeLists.txt
llvm/tools/clang/lib/StaticAnalyzer/Core/: ExprEngine.cpp
llvm/tools/clang/test/Analysis/: valist-uninitialized.c
llvm/tools/clang/test/CXX/meta/: meta1.cpp
llvm/tools/clang/test/CodeGenOpenCL/: partial_initializer.cl
llvm/tools/clang/test/Sema/: format-strings-scanf.c
llvm/tools/clang/test/SemaOpenCL/: invalid-constant.cl  invalid-kernel-attrs.cl
llvm/tools/clang/tools/: CMakeLists.txt
llvm/tools/clang/tools/libclang/: CIndex.cpp  CXCursor.cpp
llvm/tools/clang/tools/libcppx/include/: CMakeLists.txt
llvm/tools/clang/tools/reflection-src-generator/: CMakeLists.txt  GenReflectionSrc.cpp  ReflectionHeaderID.h.in  setupReflHeaderID.cmake
llvm/tools/clang/tools/reflection-src-generator/blank_reflection_incs/: ReflectionGetRKSpecs.inc  ReflectionHeaderID.h  ReflectionObjKindList.inc  ReflectionObjKindNodes.inc
llvm/tools/clang/tools/reflection-src-generator/diamonds_to_lightning/: SmallVector.h  catchmain.cpp  catchtests.cpp  coprime.h  decldata.h  diamonds_to_lightning.h  diamonds_to_lightning.inl  dwrdebug.h  main.cpp  psrel_household_elem.h  sort_by_appearance_in.h  test_helpers.h
llvm/tools/clang/tools/reflection-src-generator/generated_files/: client_reflection_impl.hpp
llvm/tools/clang/tools/reflection-src-generator/generated_files/reflection_incs/: BuildReflectNewCases.inc  README  ReflKindAndMemNumToQTorCTD.inc  ReflectionCTDLookupCases.inc  ReflectionGetRKSpecs.inc  ReflectionObjKindNodes.inc  ReflectorCallOperator_NonPointerCases.inc  ReflectorCallOperator_PointerCases.inc
llvm/tools/clang/www/: cxx_dr_status.html
(+18 files in other folders)
